# backend

./: .gitignore  README.md  aerich.ini  pyproject.toml
.github/workflows/: tests.yml
agroatom/: __init__.py  __main__.py  conftest.py  settings.py
agroatom/cv/: utils.py
agroatom/db/: config.py
agroatom/db/models/: __init__.py  grain_culture.py  yield_calculation_container.py  yield_calculation_container_photo.py
agroatom/services/: __init__.py
agroatom/services/s3/: storage.py
agroatom/tasks/: __init__.py  scheduler.py
agroatom/tasks/actors/yield_calculation_container/: __init__.py  __main__.py  container.py  container_photo.py
agroatom/tests/: __init__.py
agroatom/web/: __init__.py  application.py  lifetime.py
agroatom/web/api/: __init__.py  router.py
agroatom/web/api/container/: __init__.py  schema.py  views.py
agroatom/web/api/echo/: __init__.py  views.py
agroatom/web/api/grain_culture/: __init__.py  schema.py  views.py
agroatom/web/api/monitoring/: __init__.py
deploy/: Dockerfile  docker-compose.yml
deploy/examples/envs/: .env  .env.db  .env.workers_dashboard
